updated style to prevent spillover

--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,8 @@
 	}
 	.column {
 		float: left;
-		width: 33.33%;
-		padding: 5px;
+		width: 31%;
+		padding: 1%;
 	  }
 	/* Clear floats after the columns */
 	.row:after {
